# SaltyBetBot

./: .gitignore  Cargo.toml  README.md  Web.toml  build.sh  manifest.json  package.json  rollup.config.js  script.js  webpack.config.js
algorithm/: Cargo.toml
algorithm/src/: genetic.rs  glicko.rs  lib.rs  main.rs  random.rs  record.rs  simulation.rs  strategy.rs  types.rs
compile/: Cargo.toml
compile/src/: main.rs
js/: background.js  chart.js  popup.js  records.js  saltybet.js  twitch_chat.js
records/: SaltyBet Records (2018-03-11T03_38_44.677Z).json  SaltyBet Records (2018-03-13T08_43_22.011Z).json  SaltyBet Records (2018-03-14T03_46_37.595Z).json  SaltyBet Records (2018-03-14T21_54_02.623Z).json  SaltyBet Records (2018-03-14T23_19_43.114Z).json  SaltyBet Records (2018-03-21T17_51_17.959Z).json  SaltyBet Records (2018-03-22T07_31_54.050Z).json  SaltyBet Records (2018-03-26T23_45_12.844Z).json  SaltyBet Records (2018-03-31T09_27_02.164Z).json  SaltyBet Records (2018-04-03T23_06_12.313Z).json  SaltyBet Records (2018-04-06T06_24_03.061Z).json  SaltyBet Records (2018-04-06T11_43_12.572Z).json  SaltyBet Records (2018-04-06T11_46_11.928Z).json  SaltyBet Records (2018-04-07T11_41_11.195Z).json  SaltyBet Records (2018-04-09T07_03_02.354Z).json
rollup-plugin/: index.js  package.json
src/: api.rs  common.rs  genetic.rs  indexeddb.rs  lib.rs  macros.rs  main.rs  rand.rs  record.rs  regexp.rs  simulation.rs
src/background/: Cargo.toml
src/background/src/: lib.rs
src/chart/: Cargo.toml
src/chart/src/: lib.rs
src/popup/: Cargo.toml
src/popup/src/: lib.rs
src/records/: Cargo.toml
src/records/src/: lib.rs
src/saltybet/: Cargo.toml  query.rs  twitch_chat.rs
src/saltybet/src/: lib.rs
src/twitch_chat/: Cargo.toml
src/twitch_chat/src/: lib.rs
static/: background.html  background.js  background.wasm  chart.css  chart.html  chart.js  chart.wasm  index.html  manifest.json  popup.css  popup.html  popup.js  popup.wasm  records.css  records.html  records.js  records.wasm  saltybet.js  saltybet.wasm  twitch_chat.js  twitch_chat.wasm
static/js/: background.js  background.js.map  background.wasm  chart.js  chart.js.map  chart.wasm  popup.js  popup.js.map  popup.wasm  records.js  records.js.map  records.wasm  saltybet.js  saltybet.js.map  saltybet.wasm  twitch-chat.wasm  twitch_chat.js  twitch_chat.js.map
static/js/assets/: background-af8ed48f.wasm  background-c2bc23ec.wasm  background-cfe9e3a4.wasm  background.wasm  chart-2641553c.wasm  chart-43971164.wasm  chart-febb6c09.wasm  chart.wasm  popup-57c34caa.wasm  popup-c5acd865.wasm  popup-f7f293ad.wasm  popup.wasm  records-a4a58c1f.wasm  records-b367404b.wasm  records-fb19b759.wasm  records.wasm  saltybet-21b0d9a0.wasm  saltybet-97b27127.wasm  saltybet-acdb635b.wasm  saltybet.wasm  twitch-chat-ecb18cb1.wasm  twitch-chat-eef1edee.wasm  twitch-chat-fdc4b37e.wasm  twitch-chat.wasm
static/js/chunks/: 10.js  11.js  6.js  7.js  8.js  9.js
strategies/: 2018-08-20T12.29.43 (matchmaking)  2018-11-04T17.18.57 (matchmaking)  2018-11-10T22.51.42 (matchmaking)  2018-11-10T23.22.30 (matchmaking)  2019-07-30T11.20.23 0 (matchmaking)  matchmaking_strategy  tournament_strategy
