[package]
name = "algorithm"
version = "0.1.0"
authors = ["Pauan <pcxunlimited@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = { version = "0.4.7", features = ["serde-1"] }
lazy_static = "1.0.0"
rand = { version = "0.6.5", features = ["stdweb"] }
#csv = "1.0.0-beta.5"
rayon = "1.0.0"
serde = "1.0.27"
serde_json = "1.0.10"
serde_derive = "1.0.27"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "asmjs")))'.dependencies]
chrono = "0.4.0"
indicatif = "0.11.0"
