[package]
name = "saltybetbot-background"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
edition = "2018"
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
algorithm = { path = "../../algorithm" }
salty_bet_bot = { path = "../.." }
dominator = "0.5.0"
futures-signals = "0.3.0"
wasm-bindgen = "0.2.48"
console_error_panic_hook = "0.1.5"
wasm-bindgen-futures = "0.4.5"
