[package]
name = "saltybetbot-saltybet"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
edition = "2018"
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
algorithm = { path = "../../algorithm" }
salty_bet_bot = { path = "../.." }
lazy_static = "1.0.0"
dominator = "0.5.0"
glicko2 = "0.3.0"
gloo-timers = "0.2.0"
futures-core = "0.3.0"
futures-util = "0.3.0"
futures-signals = "0.3.0"
wasm-bindgen = "0.2.48"
wasm-bindgen-futures = "0.4.5"
console_error_panic_hook = "0.1.5"

[dependencies.web-sys]
version = "0.3.33"
features = [
    "NodeList",
]
