[package]
name = "twitch-chat"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
edition = "2018"
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
algorithm = { path = "../../algorithm" }
salty_bet_bot = { path = "../.." }
discard = "1.0.0"
gloo-timers = "0.2.0"
js-sys = "0.3.33"
wasm-bindgen = "0.2.48"
console_error_panic_hook = "0.1.5"

[dependencies.web-sys]
version = "0.3.33"
features = [
    "console",
    "HtmlImageElement",
]
